# unnamed-sdvx-clone

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GenerateWin64ProjectFiles.bat  LICENSE.md  README.md  build.linux  build.windows  mac-cmake.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
Audio/: CMakeLists.txt  stdafx.h
Audio/include/Audio/: Audio.hpp  AudioBase.hpp  AudioStream.hpp  AudioStreamBase.hpp  Audio_Impl.hpp  DSP.hpp  Sample.hpp
Audio/src/: Audio.cpp  AudioBase.cpp  AudioStream.cpp  AudioStreamBase.cpp  AudioStreamBase.hpp  AudioStreamMa.cpp  AudioStreamMa.hpp  AudioStreamMp3.cpp  AudioStreamMp3.hpp  AudioStreamOgg.cpp  AudioStreamOgg.hpp  AudioStreamPcm.cpp  AudioStreamPcm.hpp  AudioStreamWav.cpp  AudioStreamWav.hpp  AudioStream_ma.cpp  AudioStream_mp3.cpp  AudioStream_ogg.cpp  AudioStream_wav.cpp  DSP.cpp  Sample.cpp  stdafx.h
Audio/src/Unix/: AudioOutput_SDL.cpp
Audio/src/Windows/: AudioOutput_WASAPI.cpp
Beatmap/: .CMakeLists.txt.swp  CMakeLists.txt  stdafx.h
Beatmap/include/Beatmap/: AudioEffects.hpp  Beatmap.hpp  BeatmapObjects.hpp  BeatmapPlayback.hpp  Database.hpp  KShootMap.hpp  MapDatabase.hpp  PlaybackOptions.hpp
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapObjects.cpp  BeatmapPlayback.cpp  ChallengeIndex.cpp  Database.cpp  KShootMap.cpp  MapDatabase.cpp  PlaybackOptions.cpp
GUI/: CMakeLists.txt
GUI/include/GUI/: nanovg_lua.h
Graphics/: CMakeLists.txt  stdafx.h
Graphics/include/Graphics/: Font.hpp  GL.hpp  Image.hpp  ImageLoader.hpp  Keys.hpp  Material.hpp  Mesh.hpp  OpenGL.hpp  ParticleEmitter.hpp  ParticleParameter.hpp  ParticleSystem.hpp  Shader.hpp  Texture.hpp  Window.hpp
Graphics/src/: Font.cpp  Gamepad_Impl.cpp  Gamepad_Impl.hpp  Image.cpp  ImageLoader.cpp  Material.cpp  Mesh.cpp  OpenGL.cpp  ParticleSystem.cpp  RenderQueue.cpp  Shader.cpp  SpriteMap.cpp  Texture.cpp  Window.cpp  stdafx.h
Main/: Application.cpp  Application.hpp  Background.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CollectionDialog.cpp  CollectionDialog.hpp  DownloadScreen.cpp  DownloadScreen.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  Input.cpp  Input.hpp  LaserTrackBuilder.cpp  MultiplayerScreen.cpp  MultiplayerScreen.hpp  ReplayScreen.cpp  ReplayScreen.hpp  Resource.aps  Resource.rc  ScoreScreen.cpp  ScoreScreen.hpp  Scoring.cpp  Scoring.hpp  SettingsScreen.cpp  SettingsScreen.hpp  SkinConfig.cpp  SkinConfig.hpp  SkinHttp.cpp  SkinHttp.hpp  SongFilter.cpp  SongFilter.hpp  SongSelect.cpp  TCPSocket.cpp  TCPSocket.hpp  Test.cpp  TitleScreen.cpp  (+5 more)
Main/Audio/: AudioPlayback.cpp  AudioPlayback.hpp
Main/include/: Application.hpp  ApplicationTickable.hpp  AsyncLoadable.hpp  BaseGameSettingsDialog.hpp  BasicDefinitions.hpp  CalibrationScreen.hpp  Camera.hpp  ChallengeResult.hpp  ChallengeSelect.hpp  ChatOverlay.hpp  CollectionDialog.hpp  DBUpdateScreen.hpp  DownloadScreen.hpp  FilterSelection.hpp  Game.hpp  GameConfig.hpp  GameFailCondition.hpp  GameplaySettingsDialog.hpp  Gauge.hpp  GuiUtils.hpp  HitStat.hpp  IR.hpp  Input.hpp  ItemSelectionWheel.hpp  LuaRequests.hpp  MultiplayerScreen.hpp  PracticeModeSettingsDialog.hpp  PreviewPlayer.hpp  ScoreScreen.hpp  Scoring.hpp  SettingsPage.hpp  SettingsScreen.hpp  ShadedMesh.hpp  SkinConfig.hpp  SkinHttp.hpp  SkinIR.hpp  SongFilter.hpp  SongSelect.hpp  SongSort.hpp  TCPSocket.hpp  (+2 more)
Main/include/Audio/: AudioPlayback.hpp  OffsetComputer.hpp
Main/include/FastGUI/: FastGuiGame.hpp
Main/include/nuklear/: nuklear_sdl_gl3.h
Main/nuklear/: nuklear_sdl_gl3.h
Main/src/: Application.cpp  Application.hpp  AsyncAssetLoader.cpp  Background.cpp  BaseGameSettingsDialog.cpp  BasicDefinitions.cpp  CalibrationScreen.cpp  Camera.cpp  ChallengeResult.cpp  ChallengeSelect.cpp  ChatOverlay.cpp  CollectionDialog.cpp  DBUpdateScreen.cpp  DownloadScreen.cpp  Game.cpp  GameConfig.cpp  GameFailCondition.cpp  GameplaySettingsDialog.cpp  Gauge.cpp  GuiUtils.cpp  HitStat.cpp  IR.cpp  Input.cpp  LaserTrackBuilder.cpp  Main.cpp  MultiplayerScreen.cpp  PracticeModeSettingsDialog.cpp  ScoreScreen.cpp  Scoring.cpp  SettingsPage.cpp  SettingsScreen.cpp  ShadedMesh.cpp  SkinConfig.cpp  SkinHttp.cpp  SkinHttp.hpp  SkinIR.cpp  SongFilter.cpp  SongSelect.cpp  SongSort.cpp  TCPSocket.cpp  (+5 more)
Main/src/Audio/: AudioPlayback.cpp  AudioPlayback.hpp  GameAudioEffects.cpp  OffsetComputer.cpp
Main/src/FastGUI/: FastGuiGame.cpp
Shared/: CMakeLists.txt  stdafx.h
Shared/include/Shared/: BinaryStream.hpp  Buffer.hpp  Color.hpp  Config.hpp  ConfigEntry.hpp  Enum.hpp  File.hpp  Files.hpp  Jobs.hpp  Log.hpp  LuaBindable.hpp  Math.hpp  Path.hpp  Profiling.hpp  Rect.hpp  Ref.hpp  ResourceManager.hpp  String.hpp  StringEncoding.hpp  StringEncodingConverter.hpp  StringEncodingDetection.hpp  StringEncodingDetector.hpp  StringEncodingHeuristic.hpp  Unique.hpp  Vector.hpp  VectorMath.hpp
Shared/src/: Buffer.cpp  Color.cpp  Config.cpp  ConfigEntry.cpp  Jobs.cpp  Log.cpp  Path.cpp  StringEncodingConverter.cpp  StringEncodingDetection.cpp  StringEncodingDetector.cpp  StringEncodingHeuristic.cpp  UTF8.cpp
Shared/src/Linux/: Thread.cpp
Shared/src/Unix/: File.cpp  Files.cpp  Path.cpp
Shared/src/Windows/: Debug.cpp  File.cpp  Files.cpp  Path.cpp
Tests/: CMakeLists.txt
Tests.Game/: CMakeLists.txt  Main.cpp  TestAudio.cpp
Tests.Game/src/: Main.cpp  TestAudio.cpp  TestBeatmap.cpp  TestMusicPlayer.cpp  TestMusicPlayer.hpp
Tests.Shared/: CMakeLists.txt  TestString.cpp
Tests.Shared/src/: TestCharSet.cpp  TestStringEncoding.cpp  TestStringEncodingDetection.cpp
Tests/include/Tests/: TestManager.hpp
Tests/src/: TestManager.cpp
appimage/: AppRun  usc-game.desktop
cmake/: Macros.cmake
cmake/Modules/: FindOGG.cmake  FindSDL2.cmake  FindVorbis.cmake
docs/source/: bgfg.rst  challengeresult.rst  challenges.rst  chalwheel.rst  collectiondialog.rst  game.rst  gameplay.rst  gfx.rst  http.rst  index.rst  scorescreen.rst  shadedmesh.rst  skinsettings.rst  songwheel.rst  track.rst
updater/: CMakeLists.txt  updater.cpp
